<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">虚拟摄像头</string>
    <string name="click_to_go_to_repo">点击访问GitHub仓库</string>
    <string name="description">请访问在线仓库查看最新更新、使用说明和报告问题</string>
    <string name="Warning">请勿用于任何非法用途！所有后果自负！</string>
    <string name="switch1">强制显示权限不足警告</string>
    <string name="switch2">临时禁用模块（开启为禁用）</string>
    <string name="switch3">播放视频声音</string>
    <string name="switch4">强制每个应用使用私有目录</string>
    <string name="gitee" translatable="false">Gitee平台（中国大陆更快）</string>
    <string name="switch5">禁用Toast消息</string>
    <string name="permission_lack_warn">缺少权限</string>
    <string name="permission_description">访问本地存储的权限用于设置配置文件。如果拒绝，您需要手动设置文件。</string>
    <string name="positive">确定</string>
    <string name="negative">拒绝</string>
</resources>